# tradeer

./: .env.example  .gitignore  AGENTS.md  README.md  autoresearch.clj  learnings.md  patterns.md  performance_log.json  pyproject.toml  run_dashboard.py  strategy_pool.json  verify_hickey.clj  verify_hickey.py
.github/workflows/: pytest.yml
autoresearch/: iteration.py  mutator.py  seed_stats.py  simulator.py
data/: pool_stats.json
docs/: gap_analysis_auth.md  gap_analysis_autoresearch.md  gap_analysis_dashboards.md  gap_analysis_restart.md  learnings.md  patterns.md
edge-engine/: Cargo.toml  wrangler.toml
edge-engine/src/: lib.rs
src/: analytics.py  api.py  core.py  data_fetcher.py  dynamic_signals.py  exchange.py  main.py  performance.py  researcher.py  risk.py  signals.py  state_manager.py  strategy_pool.py
static/: app.js  autoresearch.html  autoresearch.js  index.html  style.css
tests/: conftest.py  test_analytics.py  test_api.py  test_autoresearch_api.py  test_exchange.py  test_exec.py  test_persistence.py  test_resilience.py  test_risk.py  test_risk_check_risk.py  test_signals.py  test_strategy_pool.py
