[tool.poetry]
name = "tradeer"
version = "0.1.0"
description = "AI-powered cryptocurrency trading system"
authors = ["DeepMind Team"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "0.128.8"
uvicorn = "0.39.0"
pydantic = "2.12.5"
pandas = "2.3.3"
numpy = "2.0.2"
ccxt = "4.5.44"
requests = "2.32.5"
python-dotenv = "1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
