[package]
name = "edge-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = "0.3.0" # Cloudflare Worker SDK
rhai = { version = "1.19.0", features = ["sync", "serde"] } # Embedded Engine
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
